Removed collapse nav bar button

--- a/src/components/AppBar.scss
+++ b/src/components/AppBar.scss
@@ -1,6 +1,7 @@
 .mainLogo {
     height: 45px;
     margin-top: 0.5em;
+    margin-left: 25px;
     will-change: filter;
     transition: filter 300ms;
 }
